--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -7,7 +7,9 @@
   --text-black: #1d3557;
   --header-height: 70px;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 /* التنسيق العام */
 body {
   font-family: 'Tajawal', sans-serif;
