--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -442,3 +442,14 @@ body {
     width: 100%;
   }
 }
+.html {
+  scroll-behavior: smooth;
+}
+#top-of-page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  visibility: hidden;
+}
